client: correct quota check in Client::_rename()

Client::_rename() only checks for max files quota. As a result, max
bytes quota is not enforced. Thus the following code (copied from
qa/workunits/fs/quota/quota.sh), runs successfully instead of exiting
with error "Disk quota exceeded" -

mkdir files limit
setfattr limit -n ceph.quota.max_bytes -v 1000
truncate filles/file1 -s 1M
mv files limit

This patch makes Client::_rename() enforce both kinds of quota which
leads command "mv files limit" from above script to fail with "Disk
quota exceeded" error. This is the expected behaviour in this case.

Conflicts:
	src/client/Client.cc
	- method "is_enabled()" on quincy is "is_enable()"
Introduced-by: dde1a19d4105f1db41477752a71d8fe40c45cd7f
Fixes: https://tracker.ceph.com/issues/58220
Signed-off-by: Rishabh Dave <ridave@redhat.com>
(cherry picked from commit a8d9a256dc1c7f4186f293eb25c4edc54f69eda3)